<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchbar_on_menu"
        android:title="@string/search"
        android:icon="@drawable/icon_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/icon_cart"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/userDataBttn"
        android:title="@string/user_data"
        app:showAsAction="never"
        android:orderInCategory="700"
        />

    <item
        android:id="@+id/logoutBttn"
        android:title="@string/log_out"
        app:showAsAction="never"
        android:orderInCategory="999"
        />
</menu>